support local OPENAI KEY

--- a/bedrock-latency-benchmark.ipynb
+++ b/bedrock-latency-benchmark.ipynb
@@ -1,12 +1,9 @@
 {
  "cells": [
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "b6c18653-9acf-4aa5-9800-76dadb55a338",
-   "metadata": {
-    "tags": []
-   },
+   "metadata": {},
    "source": [
     "# Amazon Bedrock - Latency Benchmark Tool\n",
     "This notebook contains a set of tools to benchmark inference latency for Foundation Models available in Amazon Bedrock. \n",
@@ -23,33 +20,40 @@
     "### Install needed dependencies\n",
     "Note: This notebook requires a basic Python 3 environment (e.g, `Base Python 3.0` in SageMaker Studio Notebooks)\n",
     "\n",
-    "### Store 3rd-Party API Keys\n",
-    "If comparing to LLMs on OpenAI, store your API key in AWS Secrets Manager, in the same region, in the following format:\n",
-    "- Key: `openai`\n",
-    "- Value: `sk-k....`\n",
-    "- Secret Name: `models`"
+    "### API key\n",
+    "\n",
+    "- Create a new file called `key.py` in your project directory to store your API key.\n",
+    "\n",
+    "- Do **not** commit `key.py` to source control, as it contains sensitive information. **Add `key.py` to `.gitgnore`.** Review [this information about API safety](https://help.openai.com/en/articles/5112595-best-practices-for-api-key-safety).\n",
+    "\n",
+    "- Go to your OpenAI account and navigate to \"[View API keys](https://platform.openai.com/account/api-keys).\"\n",
+    "\n",
+    "- Select \"Create new secret key.\"\n",
+    "\n",
+    "- Copy the key and insert it into your file key.py like this:\n",
+    "```\n",
+    "OPENAI_API_KEY = 'sk-actualLongKeyGoesHere123'\n",
+    "```\n",
+    "\n",
+    "- Save the changes"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "fe1b39d1-be17-4c26-afc9-9718ac0c4e24",
-   "metadata": {
-    "tags": []
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "!pip install --quiet --upgrade pip\n",
-    "!pip install --quiet --upgrade boto3 awscli matplotlib numpy pandas anthropic openai"
+    "!pip install --quiet --upgrade boto3 awscli matplotlib numpy pandas nbdime anthropic openai"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "d90ae496-c922-446d-9928-b49abf2439c9",
-   "metadata": {
-    "tags": []
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "%load_ext autoreload\n",
@@ -59,12 +63,9 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "0233b6f7-1996-4fa5-8378-6e88bd64cd73",
-   "metadata": {
-    "tags": []
-   },
+   "metadata": {},
    "source": [
     "## Scenario keys and configurations\n",
     "\n",
@@ -88,7 +89,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "870dd288",
    "metadata": {},
@@ -147,7 +147,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "aed9a92c",
    "metadata": {},
@@ -168,13 +167,9 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "c6c14d81-e230-4a7b-bb9c-6aae36d23740",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true,
-    "tags": []
-   },
+   "metadata": {},
    "source": [
     "## Example 2. Model Comparison\n",
     "<a id=\"model-compare\"></a>\n",
@@ -185,28 +180,26 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "ab76398a-06cc-4854-b726-a9e09e10905b",
-   "metadata": {
-    "tags": []
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "model_compare_scenarios = [\n",
-    "            {\n",
-    "                'model_id'    : 'anthropic.claude-v2', # <---- changed\n",
-    "                'in_tokens'  : 200,\n",
-    "                'out_tokens' : 50,\n",
-    "                'region'     : 'us-east-1',\n",
-    "                'stream' : True,\n",
-    "                'name' : f'claude-v2. in=200, out=50',\n",
-    "            },\n",
-    "            {\n",
-    "                'model_id'    : 'anthropic.claude-instant-v1', # <---- changed\n",
-    "                'in_tokens' : 200,\n",
-    "                'out_tokens' : 50,\n",
-    "                'region'     : 'us-east-1',\n",
-    "                'stream' : True,\n",
-    "                'name' : f'claude-instant-v1. in=200, out=50',\n",
-    "            },\n",
+    "            # {\n",
+    "            #     'model_id'    : 'anthropic.claude-v2', # <---- changed\n",
+    "            #     'in_tokens'  : 200,\n",
+    "            #     'out_tokens' : 50,\n",
+    "            #     'region'     : 'us-east-1',\n",
+    "            #     'stream' : True,\n",
+    "            #     'name' : f'claude-v2. in=200, out=50',\n",
+    "            # },\n",
+    "            # {\n",
+    "            #     'model_id'    : 'anthropic.claude-instant-v1', # <---- changed\n",
+    "            #     'in_tokens' : 200,\n",
+    "            #     'out_tokens' : 50,\n",
+    "            #     'region'     : 'us-east-1',\n",
+    "            #     'stream' : True,\n",
+    "            #     'name' : f'claude-instant-v1. in=200, out=50',\n",
+    "            # },\n",
     "            {\n",
     "                'model_id'    : 'gpt-4-1106-preview', # <---- changed\n",
     "                'in_tokens' : 200,\n",
@@ -226,16 +219,13 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "8198a77d-7087-4cd8-8877-d44df4ad5d70",
-   "metadata": {
-    "tags": []
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "scenarios = execute_benchmark(model_compare_scenarios, scenario_config)"
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "6be2e495-dde6-46d1-9061-fb8c5751d781",
    "metadata": {},
@@ -248,21 +238,16 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "7921f2dc-86d3-4b59-b88b-22ce604084a2",
-   "metadata": {
-    "tags": []
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "graph_scenarios_boxplot(scenarios=scenarios, title=f\"Model compare: [{scenarios[0]['name']}], [{scenarios[1]['name']}]\")"
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "b110537c-aab1-484e-b57f-f0d340e38707",
-   "metadata": {
-    "tags": []
-   },
+   "metadata": {},
    "source": [
     "## Example 3. Region Comparison\n",
     "<a id=\"region-compare\"></a>\n",
@@ -272,7 +257,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "9d24cf80-bd77-4016-ab48-dc564140b4c2",
    "metadata": {},
@@ -282,9 +266,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "9756c1dd-0f54-4def-b5f5-6f1eed29e9f3",
-   "metadata": {
-    "tags": []
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "region_compare_scenarios = [\n",
@@ -324,16 +306,13 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "d44b433f-a1f6-4655-ab85-1f4e7fd7e758",
-   "metadata": {
-    "tags": []
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "scenarios = execute_benchmark(region_compare_scenarios, scenario_config, early_break = False)"
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "b47558c5-e64b-4e5d-a628-d3892468eb08",
    "metadata": {},
@@ -346,9 +325,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "30aeffe9-cecb-4b78-b179-cfb2a1c15e85",
-   "metadata": {
-    "tags": []
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "graph_scenarios_boxplot(\n",
@@ -359,7 +336,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "0cf6a9ce",
    "metadata": {},
@@ -944,22 +920,14 @@
     "vcpuNum": 96
    }
   ],
-  "kernelspec": {
-   "display_name": ".venv",
-   "language": "python",
-   "name": "python3"
-  },
   "language_info": {
    "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
+    "name": "ipython"
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "nbconvert_exporter": "python"
   }
  },
  "nbformat": 4,
