Correct location of where to save key.py

--- a/bedrock-latency-benchmark.ipynb
+++ b/bedrock-latency-benchmark.ipynb
@@ -22,15 +22,15 @@
     "\n",
     "### API key\n",
     "\n",
-    "- Create a new file called `key.py` in your project directory to store your API key.\n",
+    "- Create a new file called `utils/key.py` in your project directory to store your API key.\n",
     "\n",
-    "- Do **not** commit `key.py` to source control, as it contains sensitive information. **Add `key.py` to `.gitgnore`.** Review [this information about API safety](https://help.openai.com/en/articles/5112595-best-practices-for-api-key-safety).\n",
+    "- Do **not** commit `key.py` to source control, as it contains sensitive information. **Add `*key.py` to `.gitgnore`.** Review [this information about API safety](https://help.openai.com/en/articles/5112595-best-practices-for-api-key-safety).\n",
     "\n",
     "- Go to your OpenAI account and navigate to \"[View API keys](https://platform.openai.com/account/api-keys).\"\n",
     "\n",
     "- Select \"Create new secret key.\"\n",
     "\n",
-    "- Copy the key and insert it into your file key.py like this:\n",
+    "- Copy the key and insert it into your file `utils/key.py` like this:\n",
     "```\n",
     "OPENAI_API_KEY = 'sk-actualLongKeyGoesHere123'\n",
     "```\n",
