start adding support for openai streaming. prompt engineer openai

--- a/bedrock-latency-benchmark.ipynb
+++ b/bedrock-latency-benchmark.ipynb
@@ -192,19 +192,19 @@
     "            #     'stream' : True,\n",
     "            #     'name' : f'claude-v2. in=200, out=50',\n",
     "            # },\n",
-    "            # {\n",
-    "            #     'model_id'    : 'anthropic.claude-instant-v1', # <---- changed\n",
-    "            #     'in_tokens' : 200,\n",
-    "            #     'out_tokens' : 50,\n",
-    "            #     'region'     : 'us-east-1',\n",
-    "            #     'stream' : True,\n",
-    "            #     'name' : f'claude-instant-v1. in=200, out=50',\n",
-    "            # },\n",
+    "            {\n",
+    "                'model_id'    : 'anthropic.claude-instant-v1', # <---- changed\n",
+    "                'in_tokens' : 200,\n",
+    "                'out_tokens' : 50,\n",
+    "                'region'     : 'us-east-1',\n",
+    "                'stream' : True,\n",
+    "                'name' : f'claude-instant-v1. in=200, out=50',\n",
+    "            },\n",
     "            {\n",
     "                'model_id'    : 'gpt-4-1106-preview', # <---- changed\n",
     "                'in_tokens' : 200,\n",
     "                'out_tokens' : 50,\n",
-    "                'stream' : False,\n",
+    "                'stream' : True,\n",
     "                'name' : f'gpt-4-1106-preview. in=200, out=50',\n",
     "            }\n",
     "]\n",
