make scenario labels dynamic

--- a/bedrock-latency-benchmark.ipynb
+++ b/bedrock-latency-benchmark.ipynb
@@ -127,7 +127,7 @@
     "                'region'     : 'us-east-1',\n",
     "                'stream' : True,\n",
     "                'name' : f'Classification. in=400, out=1',\n",
-    "            },\n",
+    "            }\n",
     "]\n",
     "\n",
     "scenario_config = {\n",
@@ -163,7 +163,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "graph_scenarios_boxplot(scenarios=scenarios, title=f\"Use cases compare: [{scenarios[0]['name']}], [{scenarios[1]['name']}]\")"
+    "graph_scenarios_boxplot(\n",
+    "    scenarios=scenarios, \n",
+    "    title=\"Use Cases Comparison\"\n",
+    ")"
    ]
   },
   {
@@ -184,28 +187,37 @@
    "outputs": [],
    "source": [
     "model_compare_scenarios = [\n",
-    "            # {\n",
-    "            #     'model_id'    : 'anthropic.claude-v2', # <---- changed\n",
-    "            #     'in_tokens'  : 200,\n",
-    "            #     'out_tokens' : 50,\n",
-    "            #     'region'     : 'us-east-1',\n",
-    "            #     'stream' : True,\n",
-    "            #     'name' : f'claude-v2. in=200, out=50',\n",
-    "            # },\n",
     "            {\n",
-    "                'model_id'    : 'anthropic.claude-instant-v1', # <---- changed\n",
+    "                'model_id'    : 'anthropic.claude-v2',\n",
+    "                'in_tokens'  : 200,\n",
+    "                'out_tokens' : 50,\n",
+    "                'region'     : 'us-east-1',\n",
+    "                'stream' : True\n",
+    "            },\n",
+    "            {\n",
+    "                'model_id'    : 'anthropic.claude-instant-v1',\n",
     "                'in_tokens' : 200,\n",
     "                'out_tokens' : 50,\n",
     "                'region'     : 'us-east-1',\n",
-    "                'stream' : True,\n",
-    "                'name' : f'claude-instant-v1. in=200, out=50',\n",
+    "                'stream' : True\n",
     "            },\n",
     "            {\n",
-    "                'model_id'    : 'gpt-4-1106-preview', # <---- changed\n",
+    "                'model_id'    : 'gpt-4-1106-preview',\n",
     "                'in_tokens' : 200,\n",
     "                'out_tokens' : 50,\n",
-    "                'stream' : True,\n",
-    "                'name' : f'gpt-4-1106-preview. in=200, out=50',\n",
+    "                'stream' : True\n",
+    "            },\n",
+    "            {\n",
+    "                'model_id'    : 'gpt-4-1106-preview',\n",
+    "                'in_tokens' : 200,\n",
+    "                'out_tokens' : 50,\n",
+    "                'stream' : False\n",
+    "            },\n",
+    "            {\n",
+    "                'model_id'    : 'gpt-4-1106-preview',\n",
+    "                'in_tokens' : 200,\n",
+    "                'out_tokens' : 250,\n",
+    "                'stream' : False\n",
     "            }\n",
     "]\n",
     "\n",
@@ -241,7 +253,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "graph_scenarios_boxplot(scenarios=scenarios, title=f\"Model compare: [{scenarios[0]['name']}], [{scenarios[1]['name']}]\")"
+    "in_tokens = scenarios[0]['in_tokens'] if scenarios else 'N/A'\n",
+    "out_tokens = scenarios[0]['out_tokens'] if scenarios else 'N/A'\n",
+    "\n",
+    "graph_scenarios_boxplot(\n",
+    "    scenarios=scenarios, \n",
+    "    title=\"Model Comparison\"\n",
+    ")"
    ]
   },
   {
@@ -257,12 +275,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "9d24cf80-bd77-4016-ab48-dc564140b4c2",
-   "metadata": {},
-   "source": []
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "id": "9756c1dd-0f54-4def-b5f5-6f1eed29e9f3",
@@ -274,7 +286,7 @@
     "                'model_id'    : 'anthropic.claude-instant-v1',\n",
     "                'in_tokens'  : 200,\n",
     "                'out_tokens' : 50,\n",
-    "                'region'     : 'us-east-1', # <---- changed\n",
+    "                'region'     : 'us-east-1',\n",
     "                'stream' : True,\n",
     "                'name' : f'us-east-1',\n",
     "            },\n",
@@ -282,7 +294,7 @@
     "                'model_id'    : 'anthropic.claude-instant-v1',\n",
     "                'in_tokens' : 200,\n",
     "                'out_tokens' : 50,\n",
-    "                'region'     : 'us-west-2', # <---- changed\n",
+    "                'region'     : 'us-west-2',\n",
     "                'stream' : True,\n",
     "                'name' : f'us-west-2',\n",
     "            },\n",
@@ -290,10 +302,17 @@
     "                'model_id'    : 'anthropic.claude-instant-v1',\n",
     "                'in_tokens' : 200,\n",
     "                'out_tokens' : 50,\n",
-    "                'region'     : 'eu-central-1', # <---- changed\n",
+    "                'region'     : 'eu-central-1',\n",
     "                'stream' : True,\n",
     "                'name' : f'eu-central-1',\n",
     "            },\n",
+    "            {\n",
+    "                'model_id'    : 'gpt-4-1106-preview',\n",
+    "                'in_tokens' : 200,\n",
+    "                'out_tokens' : 50,\n",
+    "                'stream' : True,\n",
+    "                'name' : f'openai',\n",
+    "            }\n",
     "]\n",
     "\n",
     "scenario_config = {\n",
@@ -328,10 +347,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "scenario_names = ', '.join([scenario['name'] for scenario in scenarios])\n",
+    "in_tokens = scenarios[0]['in_tokens'] if scenarios else 'N/A'\n",
+    "out_tokens = scenarios[0]['out_tokens'] if scenarios else 'N/A'\n",
+    "\n",
     "graph_scenarios_boxplot(\n",
     "    scenarios=scenarios, \n",
-    "    title=f\"Regions compare: [{scenarios[0]['name']}, {scenarios[1]['name']}, {scenarios[2]['name']}]\" +\n",
-    "    f\"\\n[in_tokens={scenarios[0]['in_tokens']}, out_tokens={scenarios[0]['out_tokens']}]\"\n",
+    "    title=\"Regions Comparison\"\n",
     ")"
    ]
   },
@@ -918,8 +940,39 @@
     "memoryGiB": 1152,
     "name": "ml.p4de.24xlarge",
     "vcpuNum": 96
+   },
+   {
+    "_defaultOrder": 57,
+    "_isFastLaunch": false,
+    "category": "Accelerated computing",
+    "gpuNum": 0,
+    "hideHardwareSpecs": false,
+    "memoryGiB": 32,
+    "name": "ml.trn1.2xlarge",
+    "vcpuNum": 8
+   },
+   {
+    "_defaultOrder": 58,
+    "_isFastLaunch": false,
+    "category": "Accelerated computing",
+    "gpuNum": 0,
+    "hideHardwareSpecs": false,
+    "memoryGiB": 512,
+    "name": "ml.trn1.32xlarge",
+    "vcpuNum": 128
+   },
+   {
+    "_defaultOrder": 59,
+    "_isFastLaunch": false,
+    "category": "Accelerated computing",
+    "gpuNum": 0,
+    "hideHardwareSpecs": false,
+    "memoryGiB": 512,
+    "name": "ml.trn1n.32xlarge",
+    "vcpuNum": 128
    }
   ],
+  "instance_type": "ml.t3.medium",
   "language_info": {
    "codemirror_mode": {
     "name": "ipython"
