Clarify LLM benchmark section 1 as *simulated* use case scenarios

--- a/bedrock-latency-benchmark.ipynb
+++ b/bedrock-latency-benchmark.ipynb
@@ -93,15 +93,16 @@
    "id": "870dd288",
    "metadata": {},
    "source": [
-    "## Example 1. LLM Use Case Comparison\n",
+    "## Example 1. Simulated LLM Use Case Performance Analysis\n",
     "<a id=\"uc-compare\"></a>\n",
-    "Compare the latency of a given model across different LLM use cases. \n",
-    "For example Summarization and classification:\n",
-    "- A Summarization use case is typically characterized by a lengthy input and a much shorter response. We used 2000 `in_tokens` and 200 `out_tokens`.\n",
-    "- A Classification use case is typically  characterized by a lengthy/medium input size and is single returned class (token).\n",
-    "We used 400 `in_tokens` and a single `out_tokens`.\n",
     "\n",
-    "Feel free to change the scenarios to better match your own use cases."
+    "This section illustrates a comparative analysis of model latency in simulated LLM scenarios. Rather than actual prompt engineering, we use token count variations to represent different use cases. Here's how:\n",
+    "\n",
+    "1. **Simulated Summarization Scenario**: This mimics a scenario where a lengthy input is condensed into a brief summary. We simulate this with 2000 `in_tokens` for input and 200 `out_tokens` for output.\n",
+    "\n",
+    "2. **Simulated Classification Scenario**: Here, the scenario represents processing a medium to lengthy input to categorize into a single class. For simulation, it involves 400 `in_tokens` and just 1 `out_token`.\n",
+    "\n",
+    "These scenarios are adjustable to align with your specific use cases."
    ]
   },
   {
