added support for ai21 models

--- a/bedrock-latency-benchmark.ipynb
+++ b/bedrock-latency-benchmark.ipynb
@@ -215,9 +215,10 @@
     "                'stream' : False\n",
     "            },\n",
     "            {\n",
-    "                'model_id'    : 'gpt-4-1106-preview',\n",
+    "                'model_id'    : 'ai21.j2-ultra-v1',\n",
     "                'in_tokens' : 200,\n",
-    "                'out_tokens' : 250,\n",
+    "                'out_tokens' : 50,\n",
+    "                'region'     : 'us-east-1',\n",
     "                'stream' : False\n",
     "            }\n",
     "]\n",
@@ -254,9 +255,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "in_tokens = scenarios[0]['in_tokens'] if scenarios else 'N/A'\n",
-    "out_tokens = scenarios[0]['out_tokens'] if scenarios else 'N/A'\n",
-    "\n",
     "graph_scenarios_boxplot(\n",
     "    scenarios=scenarios, \n",
     "    title=\"Model Comparison\"\n",
@@ -268,6 +266,7 @@
    "id": "b110537c-aab1-484e-b57f-f0d340e38707",
    "metadata": {},
    "source": [
+    "\n",
     "## Example 3. Region Comparison\n",
     "<a id=\"region-compare\"></a>\n",
     "Here we'll be comparing the latency of a given model_id across three different AWS regions. Different regions resides in different timezone, and the load on each region can depend on the time of day.\n",
@@ -341,10 +340,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "scenario_names = ', '.join([scenario['name'] for scenario in scenarios])\n",
-    "in_tokens = scenarios[0]['in_tokens'] if scenarios else 'N/A'\n",
-    "out_tokens = scenarios[0]['out_tokens'] if scenarios else 'N/A'\n",
-    "\n",
     "graph_scenarios_boxplot(\n",
     "    scenarios=scenarios, \n",
     "    title=\"Regions Comparison\"\n",
