Adding Titan - part1

--- a/bedrock-latency-benchmark.ipynb
+++ b/bedrock-latency-benchmark.ipynb
@@ -20,7 +20,7 @@
     "### Install needed dependencies\n",
     "Note: This notebook requires a basic Python 3 environment (e.g, `Base Python 3.0` in SageMaker Studio Notebooks)\n",
     "\n",
-    "### API key\n",
+    "### Create OpenAI API key (if measuring OpenAI models)\n",
     "\n",
     "- Create a new file called `utils/key.py` in your project directory to store your API key.\n",
     "\n",
@@ -58,6 +58,11 @@
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
+    "import logging\n",
+    "logging.basicConfig(level=logging.INFO)\n",
+    "logger = logging.getLogger('utils.utils')\n",
+    "logger.setLevel(logging.INFO) # <-- Change to DEBUG to troubleshoot errors\n",
+    "\n",
     "from utils.utils import benchmark, create_prompt, execute_benchmark, get_cached_client, post_iteration, graph_scenarios_boxplot\n",
     "import matplotlib.pyplot as plt"
    ]
@@ -177,7 +182,17 @@
    "source": [
     "## Example 2. Model Comparison\n",
     "<a id=\"model-compare\"></a>\n",
-    "Here we'll be comparing the latency of two different models: `anthropic.claude-v2` and `anthropic.claude-instant-v1`. We expect `anthropic.claude-v2` to be slower as it is a bigger, more capable and more expensive model."
+    "Here we'll be comparing the latency of these models: \n",
+    "- Bedrock\n",
+    "    - `anthropic.claude-v2` \n",
+    "    - `anthropic.claude-instant-v1`\n",
+    "    - `ai21.j2-mid-v1`\n",
+    "    - `amazon.titan-text-express-v1`\n",
+    "- OpenAI\n",
+    "    - `gpt-4`\n",
+    "    - `gpt-4-1106-preview`\n",
+    "    - `gpt-3.5-turbo`\n",
+    "\n"
    ]
   },
   {
@@ -232,7 +247,15 @@
     "                'region'     : 'us-east-1',\n",
     "                'stream' : False,\n",
     "                'name' : f'ai21.j2-mid-v1',\n",
-    "            }\n",
+    "            },\n",
+    "            {\n",
+    "                'model_id'    : 'amazon.titan-text-express-v1', # or us a fine tuned model arn\n",
+    "                'in_tokens'  : 200,\n",
+    "                'out_tokens' : 5,\n",
+    "                'region'     : 'us-east-1',\n",
+    "                'stream' : True,\n",
+    "                'name' : f'titan',\n",
+    "            },\n",
     "]\n",
     "\n",
     "scenario_config = {\n",
@@ -244,11 +267,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8198a77d-7087-4cd8-8877-d44df4ad5d70",
+   "id": "a76fb633",
    "metadata": {},
    "outputs": [],
    "source": [
-    "scenarios = execute_benchmark(model_compare_scenarios, scenario_config)"
+    "scenarios = execute_benchmark(model_compare_scenarios, scenario_config, early_break = False)"
    ]
   },
   {
@@ -256,8 +279,7 @@
    "id": "6be2e495-dde6-46d1-9061-fb8c5751d781",
    "metadata": {},
    "source": [
-    "### Results\n",
-    "Results show show that claude-instant-v1 is faster than Claude-v2."
+    "### Results"
    ]
   },
   {
