--- a/bedrock-latency-benchmark.ipynb
+++ b/bedrock-latency-benchmark.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "source": [
     "# Amazon Bedrock - Latency Benchmark Tool\n",
-    "This notebook contains a set of tools to benchmark inference latency for Foundation Models available in Amazon Bedrock. \n",
+    "This notebook contains a set of tools to benchmark inference latency for Foundation Models available in Amazon Bedrock. It supports Claude 3 models using the messaging API.\n",
     "\n",
     "You can evaluate latency for different scenarios such as comparison between use cases, regions, and models, including models from 3rd-party platforms like OpenAI's GPT-4.\n",
     "\n",
@@ -14,8 +14,8 @@
     "\n",
     "## Examples included in this notebook\n",
     "1. [Use Case Comparison](#uc-compare) - Compare the latency of a given model across different LLM use cases (e.g., Summarization and classification).\n",
-    "2. [Region Comparison](#region-compare) - Comparing latency between two different models.\n",
-    "3. [Model Comparison](#model-compare) - Comparing the latency of a given model across different AWS regions.\n",
+    "2. [Model Comparison](#model-compare) - Comparing the latency of a given model across different AWS regions.\n",
+    "3. [Region Comparison](#region-compare) - Comparing latency between two different models.\n",
     "\n",
     "### Install needed dependencies\n",
     "Note: This notebook requires a basic Python 3 environment (e.g, `Base Python 3.0` in SageMaker Studio Notebooks)\n",
@@ -119,7 +119,7 @@
    "source": [
     "use_cases_scenarios = [\n",
     "            {\n",
-    "                'model_id'    : 'anthropic.claude-v2',\n",
+    "                'model_id'    : 'anthropic.claude-3-haiku-20240307-v1:0',\n",
     "                'in_tokens'  : 2000,\n",
     "                'out_tokens' : 200,\n",
     "                'region'     : 'us-east-1',\n",
@@ -127,7 +127,7 @@
     "                'name' : f'Summarization',\n",
     "            },\n",
     "            {\n",
-    "                'model_id'    : 'anthropic.claude-v2',\n",
+    "                'model_id'    : 'anthropic.claude-3-haiku-20240307-v1:0',\n",
     "                'in_tokens' : 400,\n",
     "                'out_tokens' : 1,\n",
     "                'region'     : 'us-east-1',\n",
@@ -184,15 +184,13 @@
     "<a id=\"model-compare\"></a>\n",
     "Here we'll be comparing the latency of these models: \n",
     "- Bedrock\n",
-    "    - `anthropic.claude-v2` \n",
-    "    - `anthropic.claude-instant-v1`\n",
-    "    - `ai21.j2-mid-v1`\n",
+    "    - `anthropic.claude-3-sonnet` \n",
+    "    - `anthropic.claude-3-haiku`\n",
     "    - `amazon.titan-text-express-v1`\n",
     "- OpenAI\n",
     "    - `gpt-4`\n",
     "    - `gpt-4-1106-preview`\n",
-    "    - `gpt-3.5-turbo`\n",
-    "\n"
+    "    - `gpt-3.5-turbo`"
    ]
   },
   {
@@ -204,20 +202,20 @@
    "source": [
     "model_compare_scenarios = [\n",
     "            {\n",
-    "                'model_id'    : 'anthropic.claude-v2',\n",
+    "                'model_id'    : 'anthropic.claude-3-sonnet-20240229-v1:0',\n",
     "                'in_tokens'  : 200,\n",
     "                'out_tokens' : 50,\n",
     "                'region'     : 'us-east-1',\n",
     "                'stream' : True,\n",
-    "                'name' : f'claude-v2',\n",
+    "                'name' : f'claude-3-Sonnet',\n",
     "            },\n",
     "            {\n",
-    "                'model_id'    : 'anthropic.claude-instant-v1',\n",
+    "                'model_id'    : 'anthropic.claude-3-haiku-20240307-v1:0',\n",
     "                'in_tokens' : 200,\n",
     "                'out_tokens' : 50,\n",
     "                'region'     : 'us-east-1',\n",
     "                'stream' : True,\n",
-    "                'name' : f'claude-instant-v1',\n",
+    "                'name' : f'claude-3-Haiku',\n",
     "            },\n",
     "            {\n",
     "                'model_id'    : 'gpt-4',\n",
@@ -239,14 +237,6 @@
     "                'out_tokens' : 50,\n",
     "                'stream' : True,\n",
     "                'name' : f'gpt-3.5-turbo',\n",
-    "            },\n",
-    "            {\n",
-    "                'model_id'    : 'ai21.j2-mid-v1',\n",
-    "                'in_tokens' : 200,\n",
-    "                'out_tokens' : 50,\n",
-    "                'region'     : 'us-east-1',\n",
-    "                'stream' : False,\n",
-    "                'name' : f'ai21.j2-mid-v1',\n",
     "            },\n",
     "            {\n",
     "                'model_id'    : 'amazon.titan-text-express-v1', # or us a fine tuned model arn\n",
@@ -317,29 +307,29 @@
    "source": [
     "region_compare_scenarios = [\n",
     "            {\n",
-    "                'model_id'    : 'anthropic.claude-instant-v1',\n",
-    "                'in_tokens'  : 200,\n",
+    "                'model_id'    : 'anthropic.claude-3-haiku-20240307-v1:0',\n",
+    "                'in_tokens' : 200,\n",
     "                'out_tokens' : 50,\n",
+    "                'stream' : True,\n",
+    "                'name' : f'us-east-1: claude-3-Haiku',\n",
     "                'region'     : 'us-east-1',\n",
-    "                'stream' : True,\n",
-    "                'name' : f'us-east-1',\n",
     "            },\n",
     "            {\n",
-    "                'model_id'    : 'anthropic.claude-instant-v1',\n",
+    "                'model_id'    : 'anthropic.claude-3-haiku-20240307-v1:0',\n",
     "                'in_tokens' : 200,\n",
     "                'out_tokens' : 50,\n",
-    "                'region'     : 'us-west-2',\n",
     "                'stream' : True,\n",
-    "                'name' : f'us-west-2',\n",
+    "                'name' : f'us-west-2: claude-3-Haiku',\n",
+    "                'region' : f'us-west-2',\n",
     "            },\n",
     "            {\n",
-    "                'model_id'    : 'anthropic.claude-instant-v1',\n",
+    "                'model_id'    : 'anthropic.claude-3-haiku-20240307-v1:0',\n",
     "                'in_tokens' : 200,\n",
     "                'out_tokens' : 50,\n",
-    "                'region'     : 'eu-central-1',\n",
     "                'stream' : True,\n",
-    "                'name' : f'eu-central-1',\n",
-    "            }\n",
+    "                'name' : f'eu-central-1: claude-3-Haiku',\n",
+    "                'region' : f'eu-central-1',\n",
+    "            },\n",
     "]\n",
     "\n",
     "scenario_config = {\n",
@@ -1011,7 +1001,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
